// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should disable the button 1`] = `
<div>
  <button
    class="hover:ngcc-tw-scale-105 ngcc-tw-text-primary-600 ngcc-tw-bg-primary-100 ngcc-tw-px-3 ngcc-tw-py-2 md:ngcc-tw-w-max ngcc-tw-w-full ngcc-tw-text-sm ngcc-tw-rounded-lg 
            ngcc-tw-duration-300 ngcc-tw-font-medium ngcc-tw-opacity-50 ngcc-tw-cursor-not-allowed"
    disabled=""
    style="color: rgb(236, 240, 241); background-color: rgb(44, 62, 80);"
    type="button"
  >
    Accept all cookies
  </button>
</div>
`;

exports[`Button should match the snapshot 1`] = `
<div>
  <button
    class="hover:ngcc-tw-scale-105 ngcc-tw-text-primary-600 ngcc-tw-bg-primary-100 ngcc-tw-px-3 ngcc-tw-py-2 md:ngcc-tw-w-max ngcc-tw-w-full ngcc-tw-text-sm ngcc-tw-rounded-lg 
            ngcc-tw-duration-300 ngcc-tw-font-medium ngcc-tw-cursor-pointer"
    style="color: rgb(236, 240, 241); background-color: rgb(44, 62, 80);"
    type="button"
  >
    Accept all cookies
  </button>
</div>
`;
